fixing position responsive mobile screen button gap

--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -36,7 +36,7 @@
 }
 
 .button {
-    margin: 10px;
+    margin: 4px;
     background-color: #2463eb;
     padding: 5px;
     width: 70px;
@@ -149,7 +149,7 @@
     /* justify-content: center; */
     align-items: center;
     position: relative;
-    max-width: 40px;
+    max-width: 30px;
 }
 
 .section-avatars-img1 {
@@ -177,6 +177,7 @@
 
 .section-avatars-containers p {
     font-size: 10px;
+    padding: 0;
 }
 
 /* Responsive */
@@ -228,7 +229,7 @@
 
     /* discover */
     .main-container {
-        margin: 100px 50px;
+        margin: 200px 50px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
